--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,75 +1,9 @@
 <div class="bannerx"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "session-stars.png" %>)">
-  <div class="clock">
-  <div class="clock__second"></div>
-  <div class="clock__minute"></div>
-    <div class="clock__hour"></div>
-  <div class="clock__axis"></div>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-    <section class="clock__indicator"></section>
-  </div>
 </div>
 
 <div class="holding-container">
 
-  <div class="clipped-border" >
+  <div class="avatar" >
     <img src="https://source.unsplash.com/featured/?{people}<%= (1..1000).to_a.sample %>" id="clipped">
   </div>
 
@@ -115,5 +49,3 @@
   <%= link_to "Book", new_user_booking_path(@user), class: "primary-button"%>
 </div>
 </div>
-
-
