--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,11 @@
     <% else %>
       <%= render 'shared/navbar_pages' %>
     <% end %>
-
     <%= render 'shared/flashes' %>
+  <div>
+    <div style="min-height: calc(100vh - 150px)">
     <%= yield %>
+  </div>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
     <%= yield :after_js %>
@@ -38,5 +40,6 @@
     <!--<script>
       AOS.init();
     </script>-->
+    <%= render 'shared/footer' %>
   </body>
 </html>
