--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="banneri"  style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.5)), url(<%= asset_path "session-mountain.png" %>)">
 </div>
 
-<div class="container">
+<div class="user-show-master-container">
   <div class="user-show-container">
     <div class="therapist-container">
       <div class="user-show-therapist-name">
@@ -25,14 +25,6 @@
       <div class="user-show-book-btn">
         <%= link_to "Book", new_user_booking_path(@user), class: "primary-button-user-show"%>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-
 
       <div class="container-reviews">
         <h4>Reviews</h4>
