--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -57,3 +57,12 @@
   font-size: 16px;
   cursor: pointer;
 }
+
+.map-container {
+  display: flex;
+  justify-content: center;
+  #map {
+    border: solid;
+    margin-top: 50px;
+  }
+}
