added button hover to primary buttons

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,7 +6,6 @@
 @import "login_sign_forms";
 @import "messages";
 @import "edit_profile";
-@import "profile";
 @import "card";
 @import "flip";
 @import "hex";
@@ -14,3 +13,4 @@
 @import "footer";
 @import "banner";
 @import "bookings_index";
+@import "button";
