--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,7 +4,7 @@
 
 // Define fonts for body and headers
 $body-font: 'Source Sans Pro', sans-serif;
-$headers-font: 'Archivo Narrow', sans-serif;;
+$headers-font: 'Archivo Narrow', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
