--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
 
 <div class="user-show-master-container">
   <div class="user-show-container">
+      <img class="therapist-avatar-container" src="https://pbs.twimg.com/profile_images/876792863459352577/SBLRu4VV_400x400.jpg" alt="">
     <div class="therapist-container">
       <div class="user-show-therapist-name">
         <h2><strong><%= @user.first_name %> <%= @user.last_name %></strong></h2>
@@ -13,8 +14,6 @@
       <div class="user-show-therapist-languages">
         <h5><strong><%= @user.languages%></strong> </h5>
       </div>
-      <br>
-      <br>
       <br>
       <div class="user-show-therapist-description">
         <%= @user.bio %>
@@ -35,7 +34,9 @@
           <%= review.description %>
           <% counter = 0 %>
           <% 5.times do %>
+          <div class="review-icons-container d-flex flex-row">
             <i class="fa <%= review.rating > counter ? 'fa-star' : 'fa-star-o' %>"></i>
+          </div>
             <% counter += 1 %>
            <% end %>
           </div>
@@ -47,7 +48,7 @@
 
     <div class="map-container">
       <div id="map" style="width: 70%;
-      height: 300px;"
+      height: 400px;"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
