--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -2,9 +2,9 @@
   <div class="tables-left">
 
     <!--UPCOMING SESSIONS TABLE -->
-    <div class="upcoming-table">
-      <div class="upcoming-table-title">UPCOMING SESSIONS</div>
-      <div class="upcoming-description-row">
+    <div class="tables-box">
+      <div class="tables-title-row">UPCOMING SESSIONS</div>
+      <div class="description-row">
         <div class="col">THERAPIST</div>
         <div class="col">SCHEDULE</div>
         <div class="col">AMOUNT</div>
@@ -60,7 +60,7 @@
     <!-- HISTORY TABLE -->
     <div class="tables-box">
       <div class="tables-title-row">HISTORY</div>
-        <div class="history-description-row">
+        <div class="description-row">
           <% if current_user.therapist %>
             <div class="col" data-label="Client">CLIENT</div>
           <% else %>
