--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,7 +35,7 @@
           <%= f.input :email, required: true, autofocus: true %>
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-        <% end %>
+          <% end %>
         </div>
         <div class="current-password">
         <%= f.input :current_password,
@@ -54,13 +54,10 @@
                     required: false %>
       </div>
       <div class="languages">
-        <% if current_user.therapist %>
-          <%= f.input :languages,
-                    required: true %>
-        <% else %>
-          <%= f.input :languages,
-                      required: false %>
-      <% end %>
+        <%= f.association :user_languages, required: false, collection: Language.all, label_method: :language_name, value_method: :id, input_html: { multiple: true, class: "multiple-select" }, include_hidden: false %>
+        <% resource.languages.each do |l| %>
+          <%= l.language_name %>
+        <% end %>
       </div>
     </div>
     <% if current_user.therapist %>
