--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -12,9 +12,12 @@
   .user-show-container {
     display: flex;
     background-color: white;
-    height: 600px;
-    padding: 50px 300px 50px 300px;
+    height: 800px;
+    padding: 50px 360px 50px 180px;
     width: 100%;
+    .therapist-container {
+      margin-top: 80px;
+    }
     .therapist-avatar-container {
       border-radius: 100px;
       height: 200px;
@@ -22,6 +25,7 @@
       position: relative;
       top: -150px;
       border: solid white;
+      left: 200px;
     }
     // .therapist-container {
     //   display: flex;
@@ -45,7 +49,6 @@
 }
 
   .therapist-reviews-container {
-    // overflow: scroll;
     height: 100%;
     width: 60%;
     .user-show-book-btn {
@@ -60,7 +63,10 @@
       }
     }
     .container-reviews {
-      // overflow: scroll;
+      overflow: scroll;
+      margin-top: 40px;
+    }
+    .card {
     }
     .review-icons-container {
       display: flex;
