fixing the user show page added price

--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -61,6 +61,10 @@
         color: white;
         background-color: #74d5e0;
       }
+      h3 {
+        margin-right: 332px;
+        margin-top: 10px;
+      }
     }
     .container-reviews {
       overflow: scroll;
