--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,6 +22,7 @@
 
     <div class="therapist-reviews-container">
       <div class="user-show-book-btn">
+        <h3>Price</h3>
         <%= link_to "Book", new_user_booking_path(@user), class: "primary-button-user-show"%>
       </div>
       <br>
