--- a/app/assets/stylesheets/components/_bookings_new.scss
+++ b/app/assets/stylesheets/components/_bookings_new.scss
@@ -1,8 +1,16 @@
 .bookings-container {
-  border: solid 1px #9c9c9c;
-  border-radius: 4px;
+  // border: solid 1px #9c9c9c;
+  // border-radius: 4px;
+  // padding: 30px;
+  // margin-top: 30px;
+  background: white;
   padding: 30px;
-  margin-top: 30px;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  margin-left: 70px;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  width: 900px;
 
   .booking-update-btn {
     display: flex;
