--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,14 +17,14 @@
           <%= f.input :email,
                       required: true,
                       autofocus: true,
-                      input_html: { autocomplete: "email" }, placeholder: "ruby@gmail.com"  %>
+                      input_html: { autocomplete: "email" }, placeholder: "email@email.com"  %>
           <%= f.input :password,
                       required: true,
                       hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                      input_html: { autocomplete: "new-password" }, placeholder: "******"  %>
+                      input_html: { autocomplete: "new-password" }, placeholder: "password"  %>
           <%= f.input :password_confirmation,
                       required: true,
-                      input_html: { autocomplete: "new-password" }, placeholder: "******"  %>
+                      input_html: { autocomplete: "new-password" }, placeholder: "password"  %>
         </div>
         <div class="form-actions-btn">
           <%= f.button :submit, "Register", class: "primary-button" %>
