--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -77,7 +77,7 @@
 
 </div>
   <div class="cardx">
-    <div class="thumbnail"><img class="left" src="https://cdn2.hubspot.net/hubfs/322787/Mychefcom/images/BLOG/Header-Blog/photo-culinaire-pexels.jpg"/></div>
+    <div class="thumbnail"><img class="left" src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552398008/computer-contemporary-cup-1251833.jpg"/></div>
     <div class="right">
       <h1><%= (((@booking.end_time - @booking.start_time) / 60) / 60).round(2) %> Hours</h1>
       <div class="author"><img src="https://randomuser.me/api/portraits/men/95.jpg"/>
@@ -89,10 +89,9 @@
     </div>
     <div class="bottom">
      <h1><%= (@booking.start_time).strftime("%dth %B") %> </h1>
-    <ul>
-      <li><i class="far fa-edit"></i></li>
-      <li><i class="far fa-registered"></i></li>
-      <li><i class="fas fa-book-reader"></i></i></li>
+      <a href=" <%= booking_chat_rooms_path(@booking) %> "><div class="fab1"><i class="far fa-edit fa-3x"></i></div></a>
+      <div class="fab2"><i class="far fa-registered fa-3x"></i></div>
+      <div class="fab3"><i class="fas fa-book-reader fa-3x"></i></div>
     </ul>
     <div class="fab"><i class="fas fa-video fa-3x""></i></div>
     </div>
