--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -92,6 +92,26 @@ Trial Run Unlimited Sessions<svg class="cta-icon" height="10" width="8"><use xli
 </body>
 </div>
 
+<div class="home-middle">
+
+  <div class="middle-left">
+    <div class="middle-icons">
+      <i class="fab fa-apple fa-3x"></i>
+      <i class="fab fa-android fa-3x"></i>
+      <i class="fas fa-desktop fa-3x"></i>
+    </div>
+    <div class="middle-someinfo">
+      <h1>Meaningful therapy from every device</h1>
+      <p>It can be difficult to wait days or weeks until your next appointment. With Talkspace, you can send your therapist a message whenever you’re near a laptop, tablet, or smartphone. Your conversation carries over seamlessly across devices and uses banking-grade encryption to keep it safe and confidential.</p>
+    </div>
+    <div class="middle-img">
+      <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552403104/devices_2x_1.png" alt="">
+    </div>
+  </div>
+  <div class="middle-pic">
+
+  </div>
+</div>
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -121,13 +141,3 @@ Trial Run Unlimited Sessions<svg class="cta-icon" height="10" width="8"><use xli
   </div>
 </div>
 
-<!-- <div class="homepage-content">
-  <div class="how-it-works">
-    <h2>How it Works</h2>
-    <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_3840/a6f05462094157.5a8e8aebce1c2.jpg" alt="">
-  </div>
-  <div class="testimonials">
-    <h2>Testimonials</h2>
-  </div>
-</div>
- -->
