--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -80,25 +80,25 @@ a:hover {
 
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+// a {
+//   color: inherit;
+//   text-decoration: none;
+// }
 
-body {
-// background: linear-gradient(180deg, rgba(11,99,206,1) 11%, rgba(19,65,148,1) 100%);
-background-attachment: fixed;
-background-size: cover;
-background-position: center;
-}
+// body {
+// background: white;
+// // background-attachment: fixed;
+// // background-size: cover;
+// // background-position: center;
+// }
 
 html, body {
-  font-size: 16px;
+  // font-size: 16px;
   --speed: cubic-bezier(0.21, 0.66, 0.61, 1);
   --time-transition-in: .5s;
   --time-transition-out: .5s;
-  --accent-1: #1AA0E8;
-  --primary: #0B63CE;
+  // --accent-1: #1AA0E8;
+  // --primary: #0B63CE;
 }
 
 //.card {
@@ -241,7 +241,8 @@ h3 {
   align-items: center;
   display: flex;
   margin: auto;
-  margin-top: 15em;
+  margin-top: 8em;
+  margin-bottom: 8em;
   max-width: 75rem;
 }
 
@@ -259,4 +260,26 @@ svg#dxp-curves, svg#commerce-curves, svg#analytics-cloud-curves {
   left: 0;
   width: 100%;
   z-index: -1;
+}
+
+.home-middle {
+  display: flex;
+  flex-direction: row;
+  padding-left: 150px;
+}
+.middle-left{
+  display: flex;
+  flex-direction: row
+}
+.middle-icons{
+  display: flex;
+}
+
+.middle-someinfo {
+  width: 60vh;
+}
+.middle-img {
+  float:left;
+  width: 756px;
+  height: 640px;
 }
