--- a/app/assets/stylesheets/pages/_userindex.scss
+++ b/app/assets/stylesheets/pages/_userindex.scss
@@ -75,7 +75,7 @@
   color: #ffffff;
   text-align: left;
   line-height: 1.4em;
-  background-color: #141414;
+  background-color: white;
 }
 .snip1336 * {
   -webkit-box-sizing: border-box;
@@ -104,7 +104,7 @@
   height: 0;
   border-style: solid;
   border-width: 55px 0 0 400px;
-  border-color: transparent transparent transparent #141414;
+  border-color: transparent transparent transparent white;
 }
 .snip1336 figcaption a {
   padding: 5px;
