--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -99,18 +99,20 @@ Trial Run Unlimited Sessions<svg class="cta-icon" height="10" width="8"><use xli
       <i class="fab fa-apple fa-3x"></i>
       <i class="fab fa-android fa-3x"></i>
       <i class="fas fa-desktop fa-3x"></i>
+      <i class="fas fa-laptop fa-3x"></i>
     </div>
     <div class="middle-someinfo">
       <h1>Meaningful therapy from every device</h1>
       <p>It can be difficult to wait days or weeks until your next appointment. With Talkspace, you can send your therapist a message whenever you’re near a laptop, tablet, or smartphone. Your conversation carries over seamlessly across devices and uses banking-grade encryption to keep it safe and confidential.</p>
+      <div class="info-img">
+        <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552405536/appstore_2.png" alt="">
+        <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552405407/googleplay_1.png" alt="">
+      </div>
     </div>
+  </div>
     <div class="middle-img">
       <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552403104/devices_2x_1.png" alt="">
     </div>
-  </div>
-  <div class="middle-pic">
-
-  </div>
 </div>
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
