--- a/app/assets/stylesheets/components/_bookings_new.scss
+++ b/app/assets/stylesheets/components/_bookings_new.scss
@@ -1,24 +1,43 @@
-.bookings-container {
-  // border: solid 1px #9c9c9c;
-  // border-radius: 4px;
-  // padding: 30px;
-  // margin-top: 30px;
-  background: white;
-  padding: 30px;
-  margin-top: 50px;
-  margin-bottom: 100px;
-  margin-left: 70px;
-  border-radius: 3px;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  width: 900px;
+.container-booking{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 32px;
 
-  .booking-update-btn {
+  .booking-box {
     display: flex;
-    .btn-primary {
+    flex-direction: column;
+    background: white;
+    padding: 16px 32px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    width: 900px;
+
+    .booking-title {
+      display: flex;
+      justify-content: space-around;
+      font-weight: 700;
+      padding: 32px 0;
+      color: #FFFFFF;
+      font-size: 24px;
       background-color: #6ECAD6;
-      border: none;
-      margin-left: auto;
-      margin-top: 10px;
+    }
+
+    .booking-update-btn {
+      display: flex;
+      justify-content: flex-end;
+      .btn-primary {
+        background-color: #6ECAD6;
+        border: none;
+        margin-left: auto;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+    }
+    .input-description {
+      height: 300px !important;
+      &::placeholder {
+        color: rgba(103, 128, 159, 1);
+      }
     }
   }
 }
+
