--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
-  <div class="bookings-container">
+<div class="container-booking">
+  <div class="booking-box">
       <br>
-      <h2>Booking Session ...</h2>
+      <div class='booking-title'>BOOKING SESSION...</div>
       <br>
     <%= simple_form_for([therapist, booking]) do |f| %>
       <% if @booking.errors.any? %>
@@ -16,17 +16,16 @@
           </ul>
         </div>
       <% end %>
-
       <div class="form-inputs">
-        <%= f.input :start_time %>
+        <%= f.input :start_time, label: 'Date and Time' %>
       </div>
       <div class="form-inputs">
-        <%= f.input :description,
-        placeholder: "Tell us a little bit about what you would like to talk with your therapist..." %>
+        <%= f.input :description, label: 'Message the therapist',
+        placeholder: "Briefly describe your story so the therapist can provide the best support...", input_html: { class: 'input-description'} %>
       </div>
       <div class="form-actions">
         <div class="booking-update-btn">
-          <%= f.button :submit, class: "btn btn-primary" %>
+          <%= f.button :submit, class: "primary-button" %>
         </div>
       </div>
     <% end %>
