--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -13,10 +13,8 @@
   border-radius: 4px;
 
   &:hover {
-    background-color: #FFFFFF;
+    background-color: #74d5e0;
     text-decoration: none;
-    color: #6ECAD6;
-    border: 4px solid #6ECAD6;
-    padding: 12px 28px;
+    color: white;
   }
 }
