--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
   <div class="login-container">
     <div class="form-login">
-      <%= resource.errors.full_messages %>
       <h2>Sign up</h2>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
@@ -13,11 +12,21 @@
                       required: true,
                       collection: [["Therapist", true],["Client", false]],
                       input_html: { multiple: false, class: "multiple-select" }  %>
-          <%= f.input :price, collection: 1..100 %>
+
+          <%= f.input :first_name,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "first_name" }, placeholder: "First Name"  %>
+
+          <%= f.input :last_name,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "last_name" }, placeholder: "Last Name"  %>
+
           <%= f.input :email,
                       required: true,
                       autofocus: true,
-                      input_html: { autocomplete: "email" }, placeholder: "ruby@gmail.com"  %>
+                      input_html: { autocomplete: "email" }, placeholder: "email@email.com"  %>
           <%= f.input :password,
                       required: true,
                       hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
