--- a/app/assets/stylesheets/components/_edit_profile.scss
+++ b/app/assets/stylesheets/components/_edit_profile.scss
@@ -15,8 +15,10 @@ h2 {
     background: white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     width: 900px;
+    border-radius: 8px;
 
     .edit-title {
+      border-radius :8px 8px 0 0;
       display: flex;
       justify-content: space-around;
       font-weight: 700;
