--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -152,3 +152,8 @@
       </div>
   </div>
 </div>
+<script>
+  document.addEventListener("DOMContentLoaded", (event) => {
+    window.scrollTo({top: 0});
+  })
+</script>
