--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
       <% if user_signed_in? %>
         <div class="nav-main-items">
           <li class="nav-item active">
-            <%= link_to "Bookings", bookings_path(@booking) %>
+            <%= link_to "Profile", profile_path(@profile) %>
           </li>
           <li class="nav-item">
             <%= link_to "Messages" %>
@@ -29,9 +29,6 @@
         <ul class="nav-item dropdown">
           <%= image_tag "head.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to profile_path do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
             <%= link_to "Settings", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </ul>
